--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-cool-img": "^1.2.6",
     "react-dom": "^16.13.1",
     "react-preloaders": "^3.0.3",
     "react-reveal": "^1.2.2",
