--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
-        "bootstrap": "^4.5.0",
-        "react": "^16.13.1",
-        "react-cool-img": "^1.2.6",
-        "react-dom": "^16.13.1",
-        "react-preloaders": "^3.0.3",
+        "axios": "^0.24.0",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
+        "react-feather": "^2.0.9",
         "react-reveal": "^1.2.2",
-        "react-scripts": "4.0.3"
+        "react-scripts": "^4.0.0"
     },
     "scripts": {
         "start": "craco start",
