--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
         "axios": "^0.24.0",
+        "kbar": "0.1.0-beta.21",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
         "react-feather": "^2.0.9",
