--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "@types/react": "^18.0.6",
         "@types/react-dom": "^18.0.2",
         "axios": "^0.24.0",
+        "blurhash": "^1.1.5",
         "react": "^17.0.0",
+        "react-blurhash": "^0.1.3",
         "react-dom": "^17.0.0",
         "react-feather": "^2.0.9",
         "react-scripts": "^4.0.0",
